# advent-2023

./: CMakeLists.txt  atoi.c  day10.c  day3  day3.c  day3ex1  day4.c  day6  day6in  day6part2.c  day8  day_1  helloworld  helloworld.c  sqeeze  sqeeze.c  tempCodeRunnerFile.c
c-lang/: pointer_args  pointer_args.c  pointerplay  pointerplay.c  tempCodeRunnerFile.c
c-lang/ds/: list.c  simplestack  simplestack.c
c-lang/gcollectors/: gcmodule.c
c-lang/pointers/: alloc.c  sort.c  strcpy.c  strlen.c
c-lang/sicp/: square  square.c
days/: day10  day4  day6.c  day8  day8.c  day_1.c  day_1_part_2  day_1_part_2.c  day_2  day_2.c  day_2_part2  day_2_part2.c
days/day3.dSYM/Contents/Resources/DWARF/: day3
days/day3.dSYM/Contents/Resources/Relocations/aarch64/: day3.yml
days/day8.dSYM/Contents/Resources/DWARF/: day8
days/day8.dSYM/Contents/Resources/Relocations/aarch64/: day8.yml
